--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">好作文</string>
 
     <string name="tab_one">首页</string>
-    <string name="tab_two">收藏记录</string>
+    <string name="tab_two">我的收藏</string>
     <string name="tab_three">我的</string>
 </resources>
