+好作文接口调用

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tab_one">首页</string>
     <string name="tab_two">我的收藏</string>
     <string name="tab_three">我的</string>
+    <string name="aboutus">好作文是全国权威、有趣的作文学习交流的APP平台，致力于为广大学生、家长、教师提供专业、全面的一站式作文投稿、写作指导、原创点评、范文欣赏等服务。好作文包括中小学各年级各种题材的作文，及时最新热点文章，能够满足所有学生对不同热点作文的需求，为大家提供作文范文学习欣赏。同时网站包括名言警句、好词好句、优美段落、成语大全、考场素材等丰富的写作素材，为学生作文提供基础的写作资源。我们会在第一时间发布全国各省市中高考作文试题、题目预测和满分作文，给予学生和家长及时参考和赏析。</string>
 </resources>
