+好作文接口调用

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">好作文</string>
+    <string name="app_name">特级教师改作文</string>
 
     <string name="tab_one">首页</string>
     <string name="tab_two">我的收藏</string>
